# Ollama-Workbench

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  =1.24.0  =4.5.0  API_DOCUMENTATION.md  AUTOGEN_FIX_README.md  CHAT_INTERFACE_FEATURES.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MODERNIZATION_COMPLETE.md  NON_FUNCTIONAL_REQUIREMENTS.md  OBSERVABILITY_SPECIFICATION.md  README.md  ROADMAP.md  TEST_COVERAGE_REPORT.md  TODO.md  USER_STORIES.md  advanced_rag.py  agents.py  app.py  app_settings.json  artifact.py  brainstorm.py  brainstorm_agents_settings.json  build.py  build_manager.py  canvas.py  chat-settings.json  chat_interface.py  chat_interface.py.backup  chat_workspace.py  check_dependencies.py  check_streamlit_option_menu.py  chroma_client.py  cleanup_tts_server.sh  collaborative_workspace.py  compare_ve.py  (+165 more)
.claude/: settings.local.json
.github/: FUNDING.yml
.secure/: salt.key
.streamlit/: config.toml
agents/: data_analyst.json  data_extractor.json  report_writer.json
autogen_compat/: __init__.py
backup_files/: APPLE_SILICON_SETUP.md  chat_interface.py  pyproject.toml  requirements.txt  setup.sh  validate_installation.py
canvas/: chat_20250520_091201.json  chat_20250520_092114.json  chat_20250520_095025.json  chat_20250521_151638.json  chat_20250521_164909.json  chat_20250521_164917.json  chat_20250522_061101.json  fe0a53f9-e6f2-4a33-a2e8-99313c77b913.json
data/: performance_metrics.json
docs/: DEPLOYMENT_GUIDE.md  GLOSSARY.md  MODEL_MANAGEMENT_README.md  MODERNIZATION_STRATEGY.md  OBSERVABILITY_README.md  PRD..md  SECURITY_COMPLIANCE.md  TECHNICAL_ARCHITECTURE.md  UX_DESIGN_GUIDE.md
extension/: background.js  (+6 more)
(+177 files in other folders)
