[tool.poetry]
name = "ollama-workbench"
version = "1.0.0"
description = "A versatile workbench for Ollama models with Apple Silicon optimization"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.32.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
transformers = "^4.38.0"
sentence-transformers = "^2.5.0"
langchain = "^0.2.15"
langchain-community = "^0.2.15"
langchain-core = "^0.2.15"
langchain-text-splitters = "^0.2.0"
langchain-openai = "^0.1.1"
spacy = "^3.7.2"
beautifulsoup4 = "^4.12.2"
markdown = "^3.5.2"
numpy = ">=1.24.3,<2.0.0"
pandas = ">=1.5.0,<2.0.0"
matplotlib = "^3.8.2"
pydantic = "^2.5.3"
requests = "^2.31.0"
pillow = "^10.1.0"
fpdf = "^1.7.2"
tiktoken = "^0.7.0"
markdownify = "^0.11.6"
openpyxl = "^3.1.2"
dataclasses-json = "^0.6.3"
python-docx = "^1.1.0"
pyvis = "^0.3.2"
networkx = "^3.2.1"
pymupdf = "^1.23.8"
scikit-learn = "^1.3.2"
rarfile = "^4.1"
docx2pdf = "^0.1.8"
nltk = "^3.8.1"
pdfkit = "^1.0.0"
PyPDF2 = "^3.0.1"
openai = "^1.43.0"
streamlit-extras = "^0.4.7"
streamlit-javascript = "^0.1.5"
streamlit-option-menu = "^0.3.13"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
